# osmo-trx

./: .checkpatch.c++.conf  .checkpatch.c.conf  .checkpatch.conf  .clang-format  .gitignore  .gitmodules  .gitreview  AUTHORS  CMakeLists.txt  COPYING  INSTALLATION  LEGAL  Makefile.am  Makefile.common  README.md  TODO-RELEASE  configure.ac  git-version-gen
CommonLibs/: BitVector.cpp  BitVector.h  BitVectorTest.cpp  CMakeLists.txt  Configuration.cpp  ConfigurationTest.cpp  Interthread.h  InterthreadTest.cpp  LinkedLists.cpp  LinkedLists.h  LogTest.cpp  Logger.cpp  Logger.h  Makefile.am  PRBS.h  Sockets.cpp  Sockets.h  SocketsTest.cpp  Threads.cpp  Threads.h  ThreadsTest.cpp  Timeval.cpp  Timeval.h  Utils.cpp  Utils.h  Vector.h  config_defs.h  debug.c  debug.h  osmo_signal.h  sqlite3util.cpp  trx_rate_ctr.cpp  trx_rate_ctr.h  trx_vty.c  trx_vty.h
GSM/: CMakeLists.txt  GSMCommon.cpp  GSMCommon.h
Transceiver52M/: CMakeLists.txt  Channelizer.cpp  Channelizer.h  ChannelizerBase.cpp  ChannelizerBase.h  Complex.h  DriveLoop.cpp  DriveLoop.h  Makefile.am  RTMD.c  RTMD.h  Resampler.cpp  Resampler.h  Synthesis.cpp  Synthesis.h  Transceiver.cpp  Transceiver.h  Transceiver2.cpp  Transceiver2.h  UHDDevice.cpp  USRPDevice.cpp  USRPDevice.h  XTRXDevice.cpp  XTRXDevice.h  cycle.h  fbsb.cpp  itrq.h  l1if.cpp  l1if.h  multiTRX.cpp  osmo-siggen.cpp  osmo-trx-dec.cpp  osmo-trx-gen.cpp  osmo-trx-org.cpp  osmo-trx.cpp  proto_trxd.c  proto_trxd.h  radioBuffer.cpp  radioBuffer.h  radioClock.cpp  (+18 more)
Transceiver52M/arch/: Makefile.am
Transceiver52M/arch/arm/: Makefile.am  convert.c  convert_neon.S  convolve.c  convolve_neon.S  mult.c  mult_neon.S  scale.c  scale_neon.S
Transceiver52M/arch/common/: Makefile.am  convert_base.c  convolve.h  convolve_base.c  fft.c  mult.h
Transceiver52M/arch/x86/: Makefile.am  convert.c  convert_sse_3.c  convert_sse_3.h  convert_sse_4_1.c  convert_sse_4_1.h  convolve.c  convolve_sse_3.c  convolve_sse_3.h
Transceiver52M/arm/: Makefile.am  convert.c
Transceiver52M/common/: Makefile.am  convert.h  convolve.h  convolve_base.c  fft.h  scale.h
Transceiver52M/device/: Makefile.am  radioDevice.h  smpl_buf.cpp  smpl_buf.h
Transceiver52M/device/bladerf/: Makefile.am  bladerf.cpp  bladerf.h
Transceiver52M/device/common/: Makefile.am  bandmanager.h  radioDevice.h  smpl_buf.cpp  smpl_buf.h
Transceiver52M/device/ipc/: IPCDevice.cpp  IPCDevice.h  Makefile.am  ipc-driver-test.c  ipc-driver-test.h  ipc_chan.c  ipc_chan.h  ipc_shm.c  ipc_shm.h  ipc_sock.c  ipc_sock.h  ipcb210.cpp  ipcb210.h  magicwrap.cpp  magicwrap.h  shm.c  shm.h  uhdwrap.cpp  uhdwrap.h
Transceiver52M/device/ipc2/: IPCDevice.cpp  IPCDevice.h  Makefile.am  ipcif.h  shmif.h  uhddev_ipc.cpp  uhdwrap.cpp
Transceiver52M/device/lms/: LMSDevice.cpp  LMSDevice.h  Makefile.am
Transceiver52M/device/uhd/: Makefile.am  UHDDevice.cpp  UHDDevice.h  smpl_buf.cpp  smpl_buf.h
Transceiver52M/device/usrp1/: Makefile.am  USRPDevice.cpp  USRPDevice.h
Transceiver52M/device/xtrx/: Makefile.am  XTRXDevice.cpp  XTRXDevice.h
Transceiver52M/grgsm_vitac/: constants.h  grgsm_vitac.cpp  grgsm_vitac.h  viterbi_detector.cc  viterbi_detector.h
Transceiver52M/ms/: bladerf_specific.h  ipc_specific.h  ipcif.c  itrq.h  l1ctl_server.c  l1ctl_server_cb.cpp  logging.c  logging.cpp  ms.cpp  ms.h  ms_commandhandler.cpp  ms_rx_burst.cpp  ms_rx_burst.h  ms_rx_burst_test.cpp  ms_rx_lower.cpp  ms_rx_upper.cpp  ms_rx_upper.h  ms_state.h  ms_trxcon_if.cpp  ms_trxcon_if.h  ms_upper.cpp  ms_upper.h  mssdr_vty.c  mssdr_vty.h  sch.c  sch.h  syncthing.cpp  syncthing.h  threadpool.h  threadsched.cpp  threadsched.h  uhd_specific.h
Transceiver52M/x86/: CMakeLists.txt  Makefile.am  convert.c  convert_sse_3.c  convert_sse_3.h  convolve.c  convolve_sse_3.h
cmake/: FindXTRX.cmake
config/: ax_ext.m4  ax_sse.m4
contrib/: jenkins.sh  osmo-trx.spec  osmo-trx.spec.in
contrib/systemd/: Makefile.am  osmo-trx-ipc.service  osmo-trx-lms.service  osmo-trx-uhd.service  osmo-trx-usrp1.service  osmo-trx-xtrx.service
debian/: changelog  control  copyright  osmo-trx-doc.install  osmo-trx-ipc.install  osmo-trx-ipc.postinst  osmo-trx-lms.install  osmo-trx-lms.postinst  osmo-trx-lms.service  osmo-trx-ms-blade.install  osmo-trx-uhd.install  osmo-trx-uhd.postinst  osmo-trx-uhd.service  osmo-trx-usrp1.install  osmo-trx-usrp1.postinst  osmo-trx-usrp1.service  osmo-trx-xtrx.install  osmo-trx.install  rules
doc/examples/: Makefile.am  osmo-trx-limesdr.cfg  osmo-trx-umtrx.cfg  osmo-trx-usrp_b200.cfg
doc/examples/osmo-trx-ipc/: osmo-trx-ipc.cfg
doc/examples/osmo-trx-lms/: osmo-trx-limesdr.cfg  osmo-trx-lms.cfg
doc/examples/osmo-trx-ms-blade/: mssdr.cfg
doc/examples/osmo-trx-uhd/: osmo-trx-limesdr.cfg  osmo-trx-uhd.cfg  osmo-trx-umtrx.cfg  osmo-trx-usrp_b200.cfg
doc/examples/osmo-trx-xtrx/: osmo-trx-xtrx.cfg
doc/manuals/: Makefile  Makefile.am  osmotrx-usermanual-docinfo.xml  osmotrx-usermanual.adoc  osmotrx-vty-reference.xml
doc/manuals/chapters/: code-architecture.adoc  configuration.adoc  control.adoc  counters.adoc  counters_generated.adoc  device-usrp-inband-signaling-usb.adoc  ipc_if.adoc  overview.adoc  running.adoc  trx-architectures.adoc  trx-backends.adoc  trx-devices.adoc
doc/manuals/vty/: Makefile.vty-reference.inc  osmotrx-vty-reference.xml  trx_vty_additions.xml  trx_vty_reference.xml
tests/: Makefile.am  testsuite.at
tests/CommonLibs/: BitVectorTest.cpp  BitVectorTest.ok  InterthreadTest.cpp  InterthreadTest.ok  LogTest.cpp  LogTest.err  LogTest.ok  Makefile.am  PRBSTest.cpp  PRBSTest.ok  SocketsTest.cpp  TimevalTest.cpp  TimevalTest.ok  VectorTest.cpp  VectorTest.ok
tests/Transceiver52M/: ConvolveTest  LMSDeviceTest.cpp  Makefile.am  convolve_test.c  convolve_test.ok  convolve_test_golden.h
trxcon/: Makefile.am  l1ctl.c  logging.c  sched_lchan_sch.c  sched_lchan_xcch.c  trx_if.c  trx_if.c.backup.c  trx_if.h  trxcon.c
trxcon/include/osmocom/bb/trxcon/: trx_if.h
trxcon/src/: Makefile.am  l1ctl.c  logging.c  trx_if.c  trxcon.c  trxcon_fsm.c
utils/va-test/: Makefile.am  burst-gen.cpp  demodbits_tsc7.s8  nb_chunk_tsc7.cfile
(+6 files in other folders)
